--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
 </script>
 
-<script src="https://raw.githubusercontent.com/juaslpm/juas/main/jslpdocusign"></script> 
+<script src="jslpdocusign"></script> 
 
 
 </body></html>
